# ChangeLog for x11-misc/rss_glx
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/rss_glx/ChangeLog,v 1.2 2002/11/27 22:22:21 mkeadle Exp $

*rss_glx-0.6.7 (27 Nov 2002)

  27 Nov 2002; Matt Keadle <mkeadle@gentoo.org> rss_glx-0.6.7.ebuild
  files/digest-rss_glx-0.6.7

  Bump to latest release and added IUSE="". Problems with plasma in full
  screen have been fixed, as well as other things. Please see
  http://rss-glx.sourceforge.net/ for the full rss_glx 0.6.7 ChangeLog.

*rss_glx-0.6.6 (22 Nov 2002)

  22 Nov 2002; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Benjamin Ritcey <gentoo@ritcey.com>.